# HDZap

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  議事録_20260430.md
.claude/commands/: release.md
.github/workflows/: flasher.yml
.jjconflict-base-0/: README.md
.jjconflict-base-0/app/: ExportOptions.plist
.jjconflict-base-0/docs/: compatible-devices.md
.jjconflict-side-0/app/: project.yml
.jjconflict-side-0/docs/: architecture.md
.jjconflict-side-0/firmware/: platformio.ini
.jjconflict-side-0/scripts/: release.sh  test_timer_backpack.py
app/: ExportOptions.plist  project.yml
app/HDZap/: HDZapApp.swift  Info.plist  Localizable.xcstrings
app/HDZap.xcodeproj/: project.pbxproj
app/HDZapShared/: RaceSnapshot.swift
app/HDZapWatch/: HDZapWatchApp.swift  Info.plist
app/HDZeroLapTimer/: HDZeroLapTimerApp.swift  Info.plist
docs/: ARCHITECTURE.md  REPORT.md  architecture.md  compatible-devices.md  report.md  screenshot-capture.md  testflight-setup.md
docs/flash/: flasher.js  index.html  (+1 more)
firmware/: min_spiffs.csv  platformio.ini
openspec/: config.yaml
scripts/: ble_test.py  build.sh  dump_analysis_spiffs.py  release.sh  upload-testflight.sh  watch-deploy.sh
tts-quality-test/: .env.example  .env.op  .gitignore  README.md  compare.html  phrases.json  pyproject.toml  tts_test.py
tts-quality-test/providers/: __init__.py  aws_polly.py  base.py  cartesia.py  elevenlabs.py  fish_audio.py  gemini.py  google_cloud.py  inworld.py  murf.py  openai_tts.py  xai_grok.py
tts-quality-test/scripts/: measure_streaming_latency.py  test_number_formats.py
(+148 files in other folders)
